root/k8stesting/webapp/sample-webapp.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sample-webapp
  namespace: default
  labels:
    name: sample-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sample-webapp
  template:
    metadata:
      labels:
        name: sample-webapp
    spec:
      containers:
      - name: sample-webapp
        image: docker.cloudin.com/testing/k8s-sample-webapp:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: sample-webapp
  namespace: default
  labels:
    name: sample-webapp
spec:
  ports:
    - port: 8000
  selector:
    name: sample-webapp
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-webapp
  namespace: default
  annotations:
    ingress.kubernetes.io/enable-ipport: "true"
    ingress.kubernetes.io/ipport: "30009"
spec:
  rules:
  - host: testing.sample-webapp.cloudin.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-webapp
          servicePort: 8000
